src/test/deca/syntax/valid/print/print-int.deca
// Description:
//    Programme minimaliste affichant un nombre.
//
// Résultats:
//    42
//
// Historique:
//    créé le 01/01/2025

{
    println(42);
}
